--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             <li><a class='footer-elements-first' href=''>Follow Us</a></li>
             <li><a class='footer-elements' href=''>Instagram</a></li>
             <li><a class='footer-elements' href=''>Youtube</a></li>
+            <p>ugi</p>
+              <p>ugi</p>
+              <p>ugi</p>
+              <p>ugi</p>
+              <p>ugi</p>
+              <p>ugi</p>
+              <p>ugi</p>
         </ul>
         </div>
  </footer>
